deployments/prosody.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: prosody
  name: prosody
  namespace: default
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      service: prosody
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: prosody
    spec:
      containers:
      - env:
        - name: JICOFO_AUTH_PASSWORD
          value: password
        - name: JICOFO_AUTH_USER
          value: focus
        - name: JICOFO_COMPONENT_SECRET
          value: password
        - name: JVB_AUTH_PASSWORD
          value: password
        - name: JVB_AUTH_USER
          value: jvb
        - name: JVB_COMPONENT_SECRET
          value: password
        - name: TZ
          value: Europe/Paris
        - name: XMPP_AUTH_DOMAIN
          value: auth.meet.jitsi
        - name: XMPP_DOMAIN
          value: meet.jitsi
        - name: XMPP_INTERNAL_MUC_DOMAIN
          value: internal-muc.meet.jitsi
        - name: XMPP_MUC_DOMAIN
          value: muc.meet.jitsi
        image: jitsi/prosody
        imagePullPolicy: Always
        name: prosody
        ports:
        - containerPort: 5222
          name: 5222tcp02
          protocol: TCP
        - containerPort: 5280
          name: 5280tcp02
          protocol: TCP
        - containerPort: 5347
          name: 5347tcp02
          protocol: TCP
        resources: {}
        securityContext:
          capabilities: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
