deployments/jvb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jitsi
  name: jvb
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: udp
    nodePort: 30000
    port: 30000
    protocol: UDP
    targetPort: 30000
  selector:
    service: jvb
  sessionAffinity: None
  type: LoadBalancer
