deployments/prosody-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: prosody
  name: prosody
  namespace: default
spec:
  ports:
  - name: "5222"
    port: 5222
    protocol: TCP
    targetPort: 5222
  - name: "5280"
    port: 5280
    protocol: TCP
    targetPort: 5280
  - name: "5347"
    port: 5347
    protocol: TCP
    targetPort: 5347
  selector:
    service: prosody
  sessionAffinity: None
  type: ClusterIP
