deployments/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webingress
  namespace: default
spec:
  rules:
  - host: jitsi.domain.com   <your domain name here>
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: http
        path: /
  tls:
  - hosts:
    - jitsi.domain.com   <your domain name here>
    secretName: <SECRET_NAME>
